syntax = "proto3";

package pb;

service RequestDuration {
  rpc Http(HttpRequestDurationRequest) returns (RequestDurationResponse) {}
  rpc Grpc(GrpcRequestDurationRequest) returns (RequestDurationResponse) {}
}

message RequestDurationResponse {}

message HttpRequestDurationRequest {
  string svr = 1;
  string path = 2;
  bool success = 3;
  double durationSecond = 4;
}

message GrpcRequestDurationRequest {
  string svr = 1;
  string method = 2;
  bool success = 3;
  double durationSecond = 4;
}